@@ -91,7 +91,7 @@
     (should sym)
     (should (symbolp sym))
     (setq list (funcall sym list "first" 1 #'string=))
-    (should (eq (compat-call plist-get list "first" #'string=) 1))))
+    (should-equal (compat-call plist-get list "first" #'string=) 1)))
 
 (defconst compat-tests--version (package-get-version))
 (ert-deftest package-get-version ()
@@ -939,7 +939,7 @@
     (insert "first\nsecond\nthird\n")
     (goto-char 7)
     (delete-line)
-    (should (equal (buffer-string) "first\nthird\n"))))
+    (should-equal (buffer-string) "first\nthird\n")))
 
 (ert-deftest list-of-strings-p ()
   (should-not (list-of-strings-p 1))
@@ -964,16 +964,16 @@
     (setq list (compat-call plist-put list 'first 1))
     (setq list (compat-call plist-put list 'second 2))
     (setq list (compat-call plist-put list 'first 10))
-    (should (eq (compat-call plist-get list 'first) 10))
-    (should (eq (compat-call plist-get list 'second) 2))
+    (should-equal (compat-call plist-get list 'first) 10)
+    (should-equal (compat-call plist-get list 'second) 2)
     (should (compat-call plist-member list 'first))
     (should-not (compat-call plist-member list 'third)))
   (let (list)
     (setq list (compat-call plist-put list "first" 1 #'string=))
     (setq list (compat-call plist-put list "second" 2 #'string=))
     (setq list (compat-call plist-put list "first" 10 #'string=))
-    (should (eq (compat-call plist-get list "first" #'string=) 10))
-    (should (eq (compat-call plist-get list "second" #'string=) 2))
+    (should-equal (compat-call plist-get list "first" #'string=) 10)
+    (should-equal (compat-call plist-get list "second" #'string=) 2)
     (should (compat-call plist-member list "first" #'string=))
     (should-not (compat-call plist-member list "third" #'string=))))
 
@@ -2677,6 +2677,37 @@
 (ert-deftest get-scratch-buffer-create ()
   (should-equal "*scratch*" (buffer-name (get-scratch-buffer-create)))
   (should-equal initial-major-mode (buffer-local-value 'major-mode (get-scratch-buffer-create))))
+
+(ert-deftest ring-resize ()
+  (let ((ring (make-ring 3)))
+    (ring-insert ring 1)
+    (ring-insert ring 2)
+    (ring-insert ring 3)
+    (ring-resize ring 5)
+    (should-equal (ring-size ring) 5)
+    (should-equal (ring-elements ring) '(3 2 1)))
+  (let ((ring (make-ring 3)))
+    (ring-resize ring 5)
+    (should (= (ring-size ring) 5))
+    (should-equal (ring-elements ring) '()))
+  (let ((ring (make-ring 3)))
+    (ring-insert ring 1)
+    (ring-insert ring 2)
+    (ring-insert ring 3)
+    (ring-insert ring 4)
+    (ring-insert ring 5)
+    (ring-resize ring 5)
+    (should-equal (ring-size ring) 5)
+    (should-equal (ring-elements ring) '(5 4 3)))
+  (let ((ring (make-ring 5)))
+    (ring-insert ring 1)
+    (ring-insert ring 2)
+    (ring-insert ring 3)
+    (ring-insert ring 4)
+    (ring-insert ring 5)
+    (ring-resize ring 3)
+    (should-equal (ring-size ring) 3)
+    (should-equal (ring-elements ring) '(5 4 3))))
 
 (provide 'compat-tests)
 ;;; compat-tests.el ends here
